jenkins/manifests/jenkins-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jenkins-deployment
  namespace: ${JENKINS_NAMESPACE}
spec:
  strategy:
    type: Recreate
  replicas: 1
  selector:
    matchLabels:
      app: jenkins
  template:
    metadata:
      labels:
        app: jenkins
    spec:
      serviceAccountName: jenkins-admin
      imagePullSecrets:
        - name: aws-ecr-secret
      securityContext:
        fsGroup: 1000
        runAsUser: 1000
      containers:
        - name: jenkins
          image: ${JENKINS_IMAGE}
          imagePullPolicy: IfNotPresent
          resources:
            limits:
              memory: 2Gi
              cpu: 1000m
            requests:
              memory: 500Mi
              cpu: 500m
          ports:
            - name: httpport
              containerPort: 8080
            - name: jnlpport
              containerPort: 50000
          startupProbe:
            httpGet:
              path: /login
              port: httpport
            periodSeconds: 10
            timeoutSeconds: 5
            failureThreshold: 60
          livenessProbe:
            httpGet:
              path: /login
              port: httpport
            initialDelaySeconds: 90
            periodSeconds: 10
            timeoutSeconds: 5
            failureThreshold: 5
          readinessProbe:
            httpGet:
              path: /login
              port: httpport
            initialDelaySeconds: 60
            periodSeconds: 10
            timeoutSeconds: 5
            failureThreshold: 3
          volumeMounts:
            - name: jenkins-data
              mountPath: /var/jenkins_home
            - name: jenkins-casc
              mountPath: /var/jenkins_casc
              readOnly: true
      volumes:
        - name: jenkins-data
          persistentVolumeClaim:
            claimName: jenkins-pv-claim
        - name: jenkins-casc
          configMap:
            name: jenkins-casc
