jenkins/manifests/jenkins-gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: jenkins-route
  namespace: ${JENKINS_NAMESPACE}
  labels:
    app: jenkins
spec:
  parentRefs:
    - name: koeppster-lan-gateway
      namespace: infrastructure
  hostnames: ["${JENKINS_HOSTNAME}"]
  rules:
    - backendRefs:
        - name: jenkins-service
          namespace: ${JENKINS_NAMESPACE}
          port: ${JENKINS_HTTP_PORT}
