jenkins/manifests/jenkins-webhook-gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: jenkins-webhook-route
  namespace: ${JENKINS_NAMESPACE}
  labels:
    app: jenkins
spec:
  parentRefs:
    - name: johnkoepp-com-gateway
      namespace: infrastructure
      sectionName: https
      port: 443
  hostnames: ["${JENKINS_WEBHOOK_HOSTNAME}"]
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /github-webhook/
      backendRefs:
        - name: jenkins-service
          namespace: ${JENKINS_NAMESPACE}
          port: ${JENKINS_HTTP_PORT}
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: jenkins-webhook-redirect
  namespace: ${JENKINS_NAMESPACE}
  labels:
    koeppster.net/aws_common_name: ${JENKINS_WEBHOOK_HOSTNAME}
    koeppster.net/aws_status: waiting
spec:
  parentRefs:
    - name: johnkoepp-com-gateway
      namespace: infrastructure
      sectionName: http
      port: 80
  hostnames: ["${JENKINS_WEBHOOK_HOSTNAME}"]
  rules:
    - filters:
        - type: RequestRedirect
          requestRedirect:
            scheme: https
            statusCode: 301
